; ModuleID = '/home/carl/AnghaBench/nuklear/example/extr_canvas.c_device_upload_atlas.c'
source_filename = "/home/carl/AnghaBench/nuklear/example/extr_canvas.c_device_upload_atlas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@GL_TEXTURE_MIN_FILTER = common dso_local global i32 0, align 4
@GL_LINEAR = common dso_local global i32 0, align 4
@GL_TEXTURE_MAG_FILTER = common dso_local global i32 0, align 4
@GL_RGBA = common dso_local global i32 0, align 4
@GL_UNSIGNED_BYTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*, i32, i32)* @device_upload_atlas to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @device_upload_atlas(%struct.device* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = getelementptr inbounds %struct.device, %struct.device* %9, i32 0, i32 0
  %11 = call i32 @glGenTextures(i32 1, i32* %10)
  %12 = load i32, i32* @GL_TEXTURE_2D, align 4
  %13 = load %struct.device*, %struct.device** %5, align 8
  %14 = getelementptr inbounds %struct.device, %struct.device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @glBindTexture(i32 %12, i32 %15)
  %17 = load i32, i32* @GL_TEXTURE_2D, align 4
  %18 = load i32, i32* @GL_TEXTURE_MIN_FILTER, align 4
  %19 = load i32, i32* @GL_LINEAR, align 4
  %20 = call i32 @glTexParameteri(i32 %17, i32 %18, i32 %19)
  %21 = load i32, i32* @GL_TEXTURE_2D, align 4
  %22 = load i32, i32* @GL_TEXTURE_MAG_FILTER, align 4
  %23 = load i32, i32* @GL_LINEAR, align 4
  %24 = call i32 @glTexParameteri(i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* @GL_TEXTURE_2D, align 4
  %26 = load i32, i32* @GL_RGBA, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* @GL_RGBA, align 4
  %30 = load i32, i32* @GL_UNSIGNED_BYTE, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @glTexImage2D(i32 %25, i32 0, i32 %26, i32 %27, i32 %28, i32 0, i32 %29, i32 %30, i8* %31)
  ret void
}

declare dso_local i32 @glGenTextures(i32, i32*) #1

declare dso_local i32 @glBindTexture(i32, i32) #1

declare dso_local i32 @glTexParameteri(i32, i32, i32) #1

declare dso_local i32 @glTexImage2D(i32, i32, i32, i32, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
